<resources>
    <string name="app_name">Llk Game</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_instruction">游戏说明</string>
    <string name="return_main">返回菜单</string>
    <string name="sign_in">登录</string>
    <string name="user_name">用户名</string>
    <string name="time_use">用时</string>
    <string name="get_score">记录得分</string>
    <string name="delete_score">清空记录</string>
    <string name="exit">退出</string>
    <string name="exit_game">退出游戏</string>
    <string name="back">返回</string>
    <string name="choose_head">选择你的头像</string>
    <string name="yes">确定</string>
</resources>
